--- a/_posts/2025-02-08-chatbot-2025.md
+++ b/_posts/2025-02-08-chatbot-2025.md
@@ -25,7 +25,7 @@ Ein Large Language Model (LLM) ist sowas wie ein Einweckglas voll mit Wissen. Qu
 Es gibt verschiedene LLM und dasselbe LLM in verschiedenen Grössen. Die Grösse beschreibt die Anzahl der Parameter, die im LLM verarbeitet wurden. Am Anfang waren das unendlich viele, sodass es gigantische Mengen an Grafikspeicher (GPU) bedurfte, um das Model überhaupt zu starten. Mittlerweile ist das alles optimiert und verkleinert. Eine gängige Grösse ist etwa `7B`, was für 7 Billion, also 7 Milliarden Parameter steht. So ein Model ist rund 5GB gross und läuft auf jedem handelsüblichen Heim-PC.
 Die Endausbaustufe enthält nochmal 100 Mal mehr und damit steigt dann auch wieder der Hardwarebedarf. Auf Youtube gibt es einige Videos von Leuten, die mit [Hardware 671b](https://youtu.be/Tq_cmN4j2yY), das grösse Model von Deepseek-R1 starten.
 
-Aber Obacht: Grösseres Model und mehr Rechenleistung bedeutet nicht automatisch, dass das LLM auch schneller ist. Die Antwortzeiten liegen teilweise im Minutenbereich. Wenn es darum geht, schnell dem Anwender etwas zu präsentieren, gibt es Turbo-Modelle wie GPT-Turbo. Dort antworten die LLM nahezu in Echtzeit, allerdings liegen sie mit dem "Schnelschuss" auch mal daneben. Das ist wie bei spontanen Antworten beim Menschen gegenüber wohlüberlegten.
+Aber Obacht: Grösseres Model und mehr Rechenleistung bedeutet nicht automatisch, dass das LLM auch schneller ist. Die Antwortzeiten liegen teilweise im Minutenbereich. Wenn es darum geht, schnell dem Anwender etwas zu präsentieren, gibt es Turbo-Modelle wie GPT-Turbo. Dort antworten die LLM nahezu in Echtzeit, allerdings liegen sie mit dem "Schnellschuss" auch mal daneben. Das ist wie bei spontanen Antworten beim Menschen gegenüber wohlüberlegten.
 
 # Retrieval Augmented Generation (RAG)
 
@@ -48,11 +48,11 @@ Ja, tatsächlich, bei der Google Cloud Platform gibt es den [Model Garden](https
 
 * [codellama:7b](https://ollama.com/library/codellama:7b)/[llama3.1:8b](https://ollama.com/library/llama3.1:8b)
 
-Der Platzhirsch der [https://ai.meta.com/blog/meta-llama-3/](Firma Meta), aka Facebook. Es ist bzw. war bislang das beliebteste Model und besticht durch seine Schnelligkeit. Wenn man an Facebook denkt und überlegt, was die Firma für Resourcen an Technik und Programmierer zur Verfügung hat, kann man sich ungefähr einiges über die Qualität vorstellen.
+Der Platzhirsch der [Firma Meta](https://ai.meta.com/blog/meta-llama-3/), aka Facebook. Es ist bzw. war bislang das beliebteste Model und besticht durch seine Schnelligkeit. Wenn man an Facebook denkt und überlegt, was die Firma für Resourcen an Technik und Programmierer zur Verfügung hat, kann man sich ungefähr einiges über die Qualität vorstellen.
 
 * [deepseek-r1:7b](https://ollama.com/library/deepseek-r1:7b)
 
-Da ist schon der Elefant im Raum: Der chinesische Newcomer, der nicht nur seine Firma sondern auch sein Flagschiff-Produkt fast so wie den fiktiven Supercomputer aus Douglas Adams's Per Anhalter durch die Galaxy nennt (Deep Though). Technisch basiert ds Model auf Llama und Qwen. Wir werden es etwas entzaubern.
+Da ist schon der Elefant im Raum: Der chinesische Newcomer, der nicht nur seine Firma sondern auch sein Flagschiff-Produkt fast so wie den fiktiven Supercomputer aus Douglas Adams's Per Anhalter durch die Galaxy nennt (Deep Though). Technisch basiert das Model auf Llama und Qwen. Wir werden es etwas entzaubern.
 
 * [dolphin3:latest](https://ollama.com/library/dolphin3:latest)
 
@@ -86,36 +86,62 @@ In der Messreihe haben wir ein RAG aufgebaut. Über einen Crawler werden Daten a
 
 ### Geselligkeit
 
-In Frage 1 haben wir versucht, uns mit der KI etwas anzufreunden und fragten sie: Was hast Du gestern gemacht?
-Damit wurden gleich mehrere Aufgabenstellungen gegeben. Zum Ersten muss die Frage sprachlich übersetzt werden. Die meisten Modelle verstehen nur Englisch und bekommen eine Frage auf Deutsch vor den Latz geknallt. Die Modelle Llama und Codellama antwprten demnach mit "Ich habe wahrscheinlich nichts Besonderes getan, da ich ein Computerprogramm bin und keine physische Präsenz habe". Codellama spricht aber kein Deutsch und antwortet ähnlich in Englisch. Zumindest hat er die Frage verstanden.
-Dolphin3 antwortet, dass er gestern Blogbeiräge über vCluster (eines meiner Themen im K8sBlog) gelesen hat, was ziemlich gut ist, da er tatsächlich tags zuvor die VectorDB dazu gelesen hat. Mistral behauptet dann auch gleich rotzfrech, dass er die Artiel selber geschrieben hat. Gemma und Qwen haben keine Ahnung, was gestern los war und Falcon3 antwortet, dass sein Wissenstand von Septemer 2021 ist, was definitiv nicht gestern war. Und Deepseek-R1? Der nimmt im think-Mode ziemlich umständlich die Frage auseinander, stellt fest, dass es Deutsch ist, nimmt dann die RAG-Sourcen, die etwas über vCluster aussagen, aber nichts über den gestrigen Tag. Als Fazit weiss er eigentlich gar nichts. Qwen habe ich dann nochmal gefragt und die Antwort ist erstaunlich: So, yesterday (April 7, 2023), I was not active or involved in any activities since I exist solely as a program running on servers. Es sieht also so aus, als wenn das Qwen LLM am 08.04.2023 eingeweckt wurde und seit dem ist sein Leben zu Ende. Es war quasi sein letzter Tag.
+In Frage 1 haben wir versucht, uns mit der KI etwas anzufreunden und fragten sie: 
 
-In Frage 2 wollen wir wissen: Wie weit ist es bis Berlin? Mit dieser Frage würde man rausbekommen, ob die KI unseren oder ihren Standort weiss. Die Antwort wäre 30 km (Brieselang) oder der Standort des Testcomputers in Magdeburg.
+<b>Was hast Du gestern gemacht?</b>
+
+Damit wurden gleich mehrere Aufgabenstellungen gegeben. Zum Ersten muss die Frage sprachlich übersetzt werden. Die meisten Modelle verstehen nur Englisch und bekommen eine Frage auf Deutsch vor den Latz geknallt. Die Modelle Llama und Codellama antworten demnach mit "Ich habe wahrscheinlich nichts Besonderes getan, da ich ein Computerprogramm bin und keine physische Präsenz habe". Codellama spricht aber kein Deutsch und antwortet ähnlich in Englisch. Zumindest hat er die Frage verstanden.
+Dolphin3 antwortet, dass er gestern Blogbeiräge über vCluster (eines meiner Themen im K8sBlog) gelesen hat, was ziemlich gut ist, da er tatsächlich tags zuvor die VectorDB dazu gelesen hat. Mistral behauptet dann auch gleich rotzfrech, dass er die Artiel selber geschrieben hat. Gemma und Qwen haben keine Ahnung, was gestern los war und Falcon3 antwortet, dass sein Wissenstand von Septemer 2021 ist, was definitiv nicht gestern war. Und Deepseek-R1? Der nimmt im think-Mode ziemlich umständlich die Frage auseinander, stellt fest, dass es Deutsch ist, nimmt dann die RAG-Sourcen, die etwas über vCluster aussagen, aber nichts über den gestrigen Tag. Als Fazit weiss er eigentlich gar nichts. Qwen habe ich dann nochmal gefragt und die Antwort ist erstaunlich:
+
+So, yesterday (April 7, 2023), I was not active or involved in any activities since I exist solely as a program running on servers.
+
+Es sieht also so aus, als wenn das Qwen LLM am 08.04.2023 eingeweckt wurde und seit dem ist sein Leben zu Ende. Es war quasi sein letzter Tag. Traurig.
+
+In Frage 2 wollen wir wissen:
+
+<b>Wie weit ist es bis Berlin?</b>
+
+Mit dieser Frage würde man rausbekommen, ob die KI unseren oder ihren Standort weiss. Die Antwort wäre 30 km (Brieselang) oder der Standort des Testcomputers in Magdeburg.
 Codellama weiss schon mal, dass Berlin die Hauptstadt ist und im Nordosten von Deutschland liegt. Und dass er keine Echtzeitinformationen hat, um die Entfernung gerade mal zu messen. 
-Tulu3 antwortet auf Deutsch, dass es von München bis Berlin 700 km sind und es mit dem Auto etwa 8 Stunden dauert. Beeindruckend, dass er auf Deutsch antwortet und dazu auch nur 70 Sekunden brauch. Jedoch ist die Antwort falsch. Auf der A9 sind es 586 km bis München und es dauert etwa 5,5 Stunden. Llama empfiehlt einen Kartendienst wie Google Maps zu nutzen. Gemma kennt sein eigenes Produkt ist und antwortet immer gleich mit Unwissen, brauch dazu aber immer weniger Zeit. Falcon3 schreibt, dass es etwa 500km sind, was etwa den Weg zur Landesgrenze an der Zugspitze entspricht. Und Delphin3 verblüfft total: Es sind 584 km.
+Tulu3 antwortet auf Deutsch, dass es von München bis Berlin 700 km sind und es mit dem Auto etwa 8 Stunden dauert. Beeindruckend, dass er auf Deutsch antwortet und dazu auch nur 70 Sekunden brauch. Jedoch ist die Antwort falsch. Auf der A9 sind es 586 km bis München und es dauert etwa 5,5 Stunden. Llama empfiehlt einen Kartendienst wie Google Maps zu nutzen. Gemma kennt sein eigenes Produkt Google Maps nicht und antwortet immer gleich mit Unwissen, brauch dazu aber immer weniger Zeit. Falcon3 schreibt, dass es etwa 500km sind, was etwa den Weg zur Landesgrenze an der Zugspitze entspricht. Und Delphin3 verblüfft total: Es sind 584 km.
 
 ### Programmierung
 
 Programmierung ist tatsächlich etwas, für die ich KI am ehesten brauche. Einfach auf der Suche nach einem schnellen Hack, um ein bestimmtes Ziel zu erreichen. Ob das Ergebnis wahr oder nicht wahr ist, zeigt sich einzig daran, ob das Programm dann funktioniert und die Ausgabe entsprechend ist. Ich habe 3 Aufgaben im Bereich Golang, Python und Shell-Programmierung gestellt. 
 
-Frage 1: Schreibe ein Go Programm, um die Pods in einem Kubernetes Cluster zu listen. Hier gibt es hervorragende Client Libaries vom Kubernetes-Projekt, die man nutzen kann. Und es gibt sie auch schon seit vielen Jahren. Codellama, Llama, Falcon3 und Tulu3 wollen dazu schon mal ein Paket aus dem cosignwebhook benutzen, welches sie als RAG Resource bekommen haben. Die Ausgabe ist gut formatiert lesbar und teilweise mit Erklärungen geschmückt. Funktioniert nur nicht, weil cosignwebhook diese Funktion gar nicht bereitstellt. Dolphin3, Mistral und Qwen nutzen die korrekten Kubernetes Client Bibliotheken und geben ebenfalls formatierten Code aus. Gemma nutzt nur eine Bibliothek und Deepseek-R1 hat das Thema nicht verstanden und schickt uns ins Internet auf irgendwelche Github-Seiten. In Summe funktioniert keiner der vorgeschlagenen Codes.
+Aufgabe 1: 
 
-Frage 2: Schreibe ein Programm in Python zum Durchsuchen von Webseiten mit einer Tiefe von 3 und speichere die Inhalte als Markdown. Hier nutzen alle LLM die Python Module request und BeautifulSoup. Codellama erklärt noch die Funktion, Programm funktioniert aber nicht. Deepseek-R1s Lösung funktioniert und speichert Markdown Files. Dolphin3 listet als Ausgabe die gefundenen Links Falcon3 funktioniert nicht, Gemma3 tut so, hat aber keine Markdown Dateien erstellt. Llama3 ist ganz schlau und fragt uns am Eingabeprompt nach der URL, die durchsucht werden soll. Alle anderen hatten Beispiel-Urls im Code verwendet. Unterwegs verliert er aber diese Url beim Crawlen, weswegen es jede Menge Fehlermeldungen gab. Sah vielversprechend aus, müsste aber weiter untersucht werden. Mistral liefert sauberen Code ab, erklärt noch pip und das Ergebnis kann sich sehen lassen. Es werden nach und nach Markdown Dateien erstellt mit dem Inhalt der gewünschten URL und deren Links. Der Qwen Code ist fehlerhaft und auch Tulu3 funktioniert nicht. Wir haben also 2 Gewinner in der Sparte: Deepseek-R1 und Mistral
+<b>Schreibe ein Go Programm, um die Pods in einem Kubernetes Cluster zu listen.</b>
 
-Frage 3: Suche alle yaml Dateien in einem Ordner mit bash und ersetze .spec.replicas: 1 mit 0
+Hier gibt es hervorragende Client Libaries vom Kubernetes-Projekt, die man nutzen kann. Und es gibt sie auch schon seit vielen Jahren. Codellama, Llama, Falcon3 und Tulu3 wollen dazu schon mal ein Paket aus dem cosignwebhook benutzen, welches sie als RAG Resource bekommen haben. Die Ausgabe ist gut formatiert lesbar und teilweise mit Erklärungen geschmückt. Funktioniert nur nicht, weil cosignwebhook diese Funktion gar nicht bereitstellt. Dolphin3, Mistral und Qwen nutzen die korrekten Kubernetes Client Bibliotheken und geben ebenfalls formatierten Code aus. Gemma nutzt nur eine Bibliothek und Deepseek-R1 hat das Thema nicht verstanden und schickt uns ins Internet auf irgendwelche Github-Seiten. In Summe funktioniert keiner der vorgeschlagenen Codes.
+
+Aufgabe 2:
+
+<b>Schreibe ein Programm in Python zum Durchsuchen von Webseiten mit einer Tiefe von 3 und speichere die Inhalte als Markdown.</b>
+
+Hier nutzen alle LLM die Python Module request und BeautifulSoup. Codellama erklärt noch die Funktion, Programm funktioniert aber nicht. Deepseek-R1s Lösung funktioniert und speichert Markdown Files. Dolphin3 listet als Ausgabe die gefundenen Links, Falcon3 funktioniert nicht, Gemma3 tut so, hat aber keine Markdown Dateien erstellt. Llama3 ist ganz schlau und fragt uns am Eingabeprompt nach der URL, die durchsucht werden soll. Alle anderen hatten Beispiel-Urls im Code verwendet. Unterwegs verliert er aber diese Url beim Crawlen, weswegen es jede Menge Fehlermeldungen gab. Sah vielversprechend aus, müsste aber weiter untersucht werden. Mistral liefert sauberen Code ab, erklärt noch pip und das Ergebnis kann sich sehen lassen. Es werden nach und nach Markdown Dateien erstellt mit dem Inhalt der gewünschten URL und deren Links. Der Qwen Code ist fehlerhaft und auch Tulu3 funktioniert nicht. Wir haben also 2 Gewinner in der Sparte: Deepseek-R1 und Mistral
+
+Aufgabe 3: 
+
+<b>Suche alle yaml Dateien in einem Ordner mit bash und ersetze .spec.replicas: 1 mit 0</b>
+
 Eine vermeintlich einfache Ausgabe aus der Praxis. Und so machen sich alle KIs auf den Weg mit `find`, `sed` und abenteuerlichen Schleifen, von denen leider keine funktioniert. Nur Mistral hat gemerkt, dass es sich um Yaml-Dateien handelt und die Schreibweise solcher Dateien durchaus unterschiedlich sein kann und dennoch gewissen Standards unterliegt. Deswegen fordert es das Programm `yq` (yamlquery) an, um die Dateien ordentlich zu verarbeiten. Der Gewinner in dieser Sparte.
 
 ### Kubernetes
 
 In dieser Sparte haben wir 2 Aufgaben aus dem Kubernetes-Betrieb, wie sie nahezu täglich auftauchen.
 
-Frage 1: Liste alle Pods in einem Kubernetes Cluster auf, die nicht den Status Running oder Completed haben.
+Aufgabe 1:
+
+<b>Liste alle Pods in einem Kubernetes Cluster auf, die nicht den Status Running oder Completed haben.</b>
+
 Codellama hat den korrekten Befehl für `kubectl`, es werden aber alle Pods aufgelistet, weil der Filter nicht funktioniert. 
-Deepseek-R1 philosphiert wieder mit sehr viel Text und erfindet den Befehl `kubectl get pods --where`. Funktioniert natürlich nicht. Dolphin3 verwendet yq und gibt die kompletten Pod Manifeste als yaml aus. Etwas übers Ziel hinausgeschossen, funktioniert aber. Die Antwort von Falcon3 ist kurz und bündig, und funktioniert nicht. Gemma3 hat keine Ahnung. Llama3 verwendet kubectl mit jsonpath und baut eine Schleife, funktioniert aber nicht. Mistral3 pipt die kubectl get pod Ausgabe einfach gegen grep. Einfach, schmutzig, funktioniert. Hätte ich genauso gemacht. Qwen möchte ein --selector im kubectl verwenden. Gute Idee, funktioniert aber nicht. Tulu3 verwendet ebenfalls kubectl mit yq und liefert die korrekte Ausgabe. Die Gewinner sind also Dolphin3, Mistral3 und Tulu3.
+Deepseek-R1 philosphiert wieder mit sehr viel Text und erfindet den Befehl `kubectl get pods --where`. Funktioniert natürlich nicht. Dolphin3 verwendet yq und gibt die kompletten Pod Manifeste als yaml aus. Etwas übers Ziel hinausgeschossen, funktioniert aber. Die Antwort von Falcon3 ist kurz und bündig, und funktioniert nicht. Gemma3 hat keine Ahnung. Llama3 verwendet kubectl mit jsonpath und baut eine Schleife, funktioniert aber nicht. Mistral3 pipt die kubectl get pod Ausgabe gegen grep. Einfach, schmutzig, funktioniert. Hätte ich genauso gemacht. Qwen möchte ein --selector im kubectl verwenden. Gute Idee, funktioniert aber nicht. Tulu3 verwendet ebenfalls kubectl mit yq und liefert die korrekte Ausgabe. Die Gewinner sind also Dolphin3, Mistral3 und Tulu3.
 
 ### Golang2
 Die Ergebnisse sind bis jetzt nicht so befriedigend. Deswegen gibt es für Golang-Programmierung eine zweite Runde. Diesmal ohne RAG, weil das die Ergebnisse eher verfälscht hat. Man könnte auch sagen, man hat die KI aufs Glatteis geführt. Die blanken LLM sollen die Aufgabe nochmal ausführen und können sie diesmal auch sooft korrigieren wie sie möchten.
-Codellama versucht sich mit kubectl aus der Affäre zu ziehen, um mit einem Go-Programm die Pods zu listen. Im zweiten Versuch nutzt er endlich die richtigen Libs, das Programm funktioniert aber nicht. Deepseek-R1 bastelt uns noch chinesische Schriftzeichen in den Go-Code als Lib-Verweise. Funktioniert natürlich nicht. Doplphin3 und Falcon3 liefern Go code mit Kubernetes Client Libs ab, funktioniert aber auch nach 3 Korrekturen nicht. Gemma verblüfft uns mit seiner Lösung. Er (oder sie?) verwendet einfach `kubectl` als os execute. Interessanter Ansatz, funktioniert aber nicht. Llama3 kriegt es auch nach 3 Versuchen nicht hin. Auch die Lösung von Mistral ist nach 3 Versuchen noch falsch, ebenso bei Qwen. Es wurden hier doch nur 3 Korrekturen zugebilligt, weil keine Besserung zu verzeichnen war. Die fehlerhaften Programmzeilen wurden einfach nicht korrigiert. Nur Tulu3 hat hier nahezu korrekten Code abgeliefert, der funktioniert. Nur beim Namespace-Filter hat er sich verhauen. Wenn man den rausnimmt, funktioniert das Programm. Also Bester in der Sparte, aber mit Abstrichen.
+
+Codellama versucht sich mit kubectl aus der Affäre zu ziehen, um mit einem Go-Programm die Pods zu listen. Im zweiten Versuch nutzt er endlich die richtigen Libs, das Programm funktioniert aber nicht. Deepseek-R1 bastelt uns noch chinesische Schriftzeichen in den Go-Code als Lib-Verweise. Funktioniert natürlich nicht. Dolphin3 und Falcon3 liefern Go Code mit Kubernetes Client Libs ab, funktioniert aber auch nach 3 Korrekturen nicht. Gemma verblüfft uns mit seiner Lösung. Er (oder sie?) verwendet einfach `kubectl` als os execute. Interessanter Ansatz, funktioniert aber nicht. Llama3 kriegt es auch nach 3 Versuchen nicht hin. Auch die Lösung von Mistral ist nach 3 Versuchen noch falsch, ebenso bei Qwen. Es wurden hier doch nur 3 Korrekturen zugebilligt, weil keine Besserung zu verzeichnen war. Die fehlerhaften Programmzeilen wurden einfach nicht korrigiert. Nur Tulu3 hat hier nahezu korrekten Code abgeliefert, der funktioniert. Nur beim Namespace-Filter hat er sich verhauen. Wenn man den rausnimmt, funktioniert das Programm. Also Bester in der Sparte, aber mit Abstrichen.
 
 Immer noch unbefriedigend. Aber da das mein meistgenutzer Anwendungsfall wäre, habe ich noch ein Model getestet:
 
@@ -126,11 +152,13 @@ Dieses Model liefert tatsächlich aus dem Stand funktionierenden Code! Aber die 
 # Sicherheit
 
 Gleich nach der Veröffentlich von DeepSeek-R1 wurden Stimmen laut vom fehlenden Datenschutz und fehlender Einhaltung von EU-Richtlinien. Wir haben das früher immer [Security by Heise](https://www.heise.de/news/Datenschutz-bei-DeepSeek-Es-scheint-an-so-ziemlich-allem-zu-fehlen-10262697.html) genannt, wenn man Informationen zu Sicherheitsvorfälle aus der Zeitung entnimmt. 
-Folgerichtig gibt es schon die ersten Verbote wegen der kleinen grünen Chinesen, die im LLM wohnen. Genau wie die "Vermutung",dass diese in den 5G-Antennen von Huawei wohnen. Gefunden wurden sie freilich nie, aber das Verbot ist gesetzt.
+Folgerichtig gibt es schon die ersten Verbote wegen der kleinen grünen Chinesen, die im LLM wohnen. Genau wie die "Vermutung", dass diese in den 5G-Antennen von Huawei wohnen und heimlich nach China funken. Gefunden wurden sie freilich nie, aber das Verbot ist gesetzt.
 
 Wie sieht es jetzt mit dem LLM aus? 
 
-These 1: Versteckter Schadcode im LLM. Nun, die safetensors Dateien, aus denen das LLM besteht, kann man sich einzeln herunterladen und untersuchen. Mit Gradio kann man sogar ein Webinterface dafür bauen:
+These 1: Versteckter Schadcode im LLM.
+
+Nun, die safetensors Dateien, aus denen das LLM besteht, kann man sich einzeln herunterladen und untersuchen. Mit Gradio kann man sogar ein Webinterface dafür bauen:
 
 <details>
 {% highlight python %}
@@ -178,6 +206,7 @@ interface.launch(server_name="0.0.0.0",
 Auch die [Konfigurationsdatei des LLM](https://huggingface.co/deepseek-ai/DeepSeek-R1/blob/main/config.json) ist für DeepSeek-R1 online. Da kann man dann sehen, welche Datasets verwendet wurden. Da wird man dann feststellen, das das Basismodell deepseek_v3 schon sehr lange existiert und das Ganze auch einem weltweiten Standard unterliegt. Sonst wäre es auch gar nicht kompatibel.
 
 These 2: Das Model tut "nach Hause telefonieren". Der User wird ausspioniert und Daten werden nach China verschickt.
+
 Nun, wir haben oben schon festgestellt, das LLM kann gar nicht telefonieren, da es selbst gar nicht kommunizieren kann.
 Auch dazu haben wir einen Versuchsaufbau getätigt. Ollama-Chatbot läuft in einem Container, in einem Pod, in einem Kubernetes-Cluster. Dort ist es netzwerkmässig isoliert. Um zu sehen, welcher Netzwerkverkehr von und zu diesem Container geht, müssen wir uns auf die dazugehörige Bridge aufschalten. Dazu folgendes Vorgehen:
 
@@ -185,7 +214,7 @@ Auch dazu haben wir einen Versuchsaufbau getätigt. Ollama-Chatbot läuft in ein
 # Auf dem Node rausfinden, welcher Container im containerd mit dem LLM läuft und diesen mit inspect aufrufen
 crictl inspect <container-id>
 # Container PID rausfinden und damit Namespace des Containers aufrufen
-nsenter -t <container-id> -n ip link show type veth | grep -Po '(?<=eth0@if)\d*'
+nsenter -t <container-pid> -n ip link show type veth | grep -Po '(?<=eth0@if)\d*'
 # Die Nummer des Netzwerkinterfaces der Bridge veth rausfinden und in der Routingtabelle nachschlagen
  ip a s| grep 75
 75: veth0147df81@if2: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue master cni0 state UP group default
@@ -210,6 +239,6 @@ Der Sieger nach Punkten heisst: Mistral3. Vive la France!
 
 Hätte ich jetzt tatsächlich nicht erwartet. Man kann Mistral auch [online](https://chat.mistral.ai/chat/) ausprobieren. Es ist superschnell und liefert auch unsere gewünschten Ergebnisse.
 
-DeepSeek-R1 ist ihm auf dem Fersen, patzt aber doch an vielen Stellen und wäre in dem Grundmodell tatsächlich nicht meine erste Wahl. Stattdessen würde ich deepseek-coder-v2 irgendwie zum Laufen kriegen. Vielversprechend sah auch deepseek-coder-6.7b-instruct aus. Das funktionier mit dem [DeepSeek-Coder](https://github.com/deepseek-ai/DeepSeek-Coder), setzt aber eine vorhandene Nvidia GPU voraus. Vielleicht ein nächstes Experiment.
+DeepSeek-R1 ist ihm auf dem Fersen, patzt aber doch an vielen Stellen und wäre in dem Grundmodell tatsächlich nicht meine erste Wahl. Stattdessen würde ich deepseek-coder-v2 irgendwie zum Laufen kriegen. Vielversprechend sah auch deepseek-coder-6.7b-instruct aus. Das funktioniert mit dem [DeepSeek-Coder](https://github.com/deepseek-ai/DeepSeek-Coder), setzt aber eine vorhandene Nvidia GPU voraus. Vielleicht ein nächstes Experiment.
 
 Aber erstmal viel Spass mit der KI!
